# vulkan-compute-demo

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ruff.toml
.github/: CONTRIBUTING.md
samples/: CMakeLists.txt  gui.cpp  perf.cpp  vkc_bin_helper.hpp  vkc_helper.hpp
samples/gaussFilter/: grayscale-after-gauss.cpp  v0-baseline.cpp  v1-separate.cpp  v2-sampling.cpp
samples/grayscale/: common.cpp  process-with-roi.cpp  storage-image-as-input.cpp
samples/sgemm/: v0-naive.cpp  v1-block-tile.cpp  v2-thread-tile-shm.cpp  v2-thread-tile.cpp  v3-tensor-core.cpp  v3-thread-tile-reg.cpp  v4-tensor-core.cpp
samples/sgemm/dbg/: finetune.cpp  ggml.cpp  perf.cpp  simon.cpp  v0-col-major.cpp  v1-transpose-A.cpp  wt0-wrap-tile.cpp  wt1-wrap-tile.cpp
samples/sgemm/dbg/rcc/: ggml.cpp  v0-col-major.cpp  v1-transpose-A.cpp
samples/sgemm/dbg/rrr/: simon.cpp  v1-transpose-A.cpp  v2-swizzle.cpp
samples/sgemm/simt/: v0-naive.cpp  v1-block-tile.cpp  v2-thread-tile-shm.cpp  v3-thread-tile-reg.cpp  v4-double-buffer.cpp  v4-float4.cpp  v5-bank-conflict.cpp  v5-float4.cpp  v6-bank-conflict.cpp  v6-double-buffer.cpp  v6-sub-thread-tile.cpp  v7-double-buffer.cpp  v7-hide-s2g.cpp  v8-hide-s2g.cpp  vx0-wrap-tile.cpp
samples/sgemm/tcore/: v0-naive.cpp  v1-block-tile.cpp  v1-wrap-tile-single.cpp  v2-wrap-tile.cpp  v3-double-buffer.cpp  v4-bank-conflict.cpp  v4-coopmat2.cpp  v5-coopmat2.cpp
shader/: CMakeLists.txt  compile_shaders.py  shader.hpp
shader/glsl/: gaussFilterV0.comp  gaussFilterV1.comp  gaussFilterV2.comp  grayscale.comp
shader/glsl/flash_attention2/: v0.comp  v1.comp
shader/glsl/gaussFilter/: rw.comp  v0.comp  v1.comp  v2.comp
shader/glsl/gauss_filter/: v0.comp  v1.comp
shader/glsl/grayscale/: ro.comp  rw.comp
shader/glsl/prefix_sum/: v0.comp
shader/glsl/sgemm/: v0.comp  v1.comp  v2.comp  v3.comp
shader/glsl/sgemm/dbg/: ggml.comp  mul_mm_funcs.glsl  shader-gen.cpp  types.glsl  v0.comp  v1.comp  wt0.comp  wt1.comp
shader/glsl/sgemm/dbg/rcc/: ggml.comp  mul_mm_funcs.glsl  v0.comp  v1.comp
shader/glsl/sgemm/dbg/rrr/: simon.comp  v0.comp  v1.comp
shader/glsl/sgemm/simt/: dbg.comp  v0.comp  v1.comp  v2.comp  v3.comp  v4.comp  v5.comp  v6.comp  v7.comp  v8.comp  vx0.comp
shader/glsl/sgemm/tcore/: v0.comp  v1.comp  v2.comp  v3.comp  v4.comp  v5.comp
shader/glsl/topk/: v0.comp
shader/hlsl/: gaussFilterImgload.hlsl  gaussFilterV0.hlsl  gaussFilterV1.hlsl  gaussFilterV2.hlsl  grayscale.hlsl
shader/spirv/: flash_attention2.cpp  flash_attention2.hpp  gaussFilter.cpp  gaussFilter.hpp  gaussFilterImgload.hlsl.h  gaussFilterImgload.hpp  gaussFilterV0.h  gaussFilterV0.hlsl.h  gaussFilterV1.h  gaussFilterV1.hlsl.h  gaussFilterV2.h  gaussFilterV2.hlsl.h  gauss_filter.cpp  gauss_filter.hpp  grayscale.cpp  grayscale.h  grayscale.hlsl.h  grayscale.hpp  prefix_sum.cpp  prefix_sum.hpp  sgemm.cpp  sgemm.hpp  topk.cpp  topk.hpp
shader/spirv/flash_attention2/: v0.h  v1.h
shader/spirv/gaussFilter/: rw.h  v0.h  v1.h
shader/spirv/gauss_filter/: v0.h  v1.h
shader/spirv/grayscale/: ro.h  rw.h
shader/spirv/prefix_sum/: v0.h
shader/spirv/sgemm/: dbg.cpp  dbg.hpp  simt.cpp  simt.hpp  tcore.cpp  tcore.hpp  v0.h  v1.h  v2.h  v3.h  v4.h
shader/spirv/sgemm/dbg/: ggml.h  rcc.cpp  rcc.hpp  rrr.cpp  rrr.hpp  simon.h  v1.h  wt1.h
shader/spirv/sgemm/dbg/rcc/: ggml.h  v0.h  v1.h
shader/spirv/sgemm/dbg/rrr/: simon.h  v0.h  v1.h
shader/spirv/sgemm/simt/: dbg.h  v0.h  v1.h  v2.h  v3.h  v4.h  v5.h  v6.h  v7.h  v8.h  vx0.h
shader/spirv/sgemm/tcore/: v0.h  v1.h  v2.h  v3.h  v4.h  v5.h
shader/spirv/topk/: v0.h
src/: CMakeLists.txt
src/include/: vkc.hpp
src/include/vkc/: buffer.hpp  command.hpp  context.hpp  descriptor.hpp  device.hpp  extent.cpp  extent.hpp  fence.cpp  fence.hpp  gui.hpp  helper.hpp  image.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  query_pool.hpp  queue.cpp  queue.hpp  queue_family.cpp  queue_family.hpp  resource.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  spirv.cpp  spirv.hpp  stb_image.cpp  stb_image.hpp  sync.hpp
src/include/vkc/_spirv/: gaussianBlur.hlsl.h  grayscale.hlsl.h
src/include/vkc/command/: buffer.cpp  buffer.hpp  concepts.hpp  pool.cpp  pool.hpp
src/include/vkc/descriptor/: binding.hpp  concepts.hpp  layout.cpp  layout.hpp  pool.cpp  pool.hpp  set.cpp  set.hpp
src/include/vkc/device/: concepts.hpp  extensions.cpp  extensions.hpp  instance.cpp  instance.hpp  logical.cpp  logical.hpp  physical.cpp  physical.hpp  props.cpp  props.hpp  queue.cpp  queue.hpp  queue_family.cpp  queue_family.hpp  score.hpp  set.cpp  set.hpp
src/include/vkc/gui/: props.cpp  props.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/include/vkc/helper/: defines.hpp  env.hpp  error.cpp  error.hpp  format.hpp  math.hpp  memory.cpp  memory.hpp  readfile.cpp  readfile.hpp  score.hpp  std.hpp  vulkan.cpp  vulkan.hpp
src/include/vkc/pipeline/: box.cpp  box.hpp  layout.cpp  layout.hpp
src/include/vkc/query_pool/: concepts.hpp  perf.cpp  perf.hpp  props.cpp  props.hpp  timestamp.cpp  timestamp.hpp
src/include/vkc/resource/: buffer.cpp  buffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  memory.cpp  memory.hpp  present_image.cpp  present_image.hpp  push_constant.hpp  sampled_image.cpp  sampled_image.hpp  sampler.cpp  sampler.hpp  spec_constant.hpp  ssbo.cpp  ssbo.hpp  staging_buffer.cpp  staging_buffer.hpp  storage_buffer.cpp  storage_buffer.hpp  storage_image.cpp  storage_image.hpp  ubo.cpp  ubo.hpp  uniform_buffer.cpp  uniform_buffer.hpp
src/include/vkc/sync/: fence.cpp  fence.hpp  semaphore.cpp  semaphore.hpp
src/lib/: CMakeLists.txt
src/shader/: CMakeLists.txt  addone.comp  gaussianBlur.comp  gaussianBlur.hlsl  grayscale.hlsl
tests/: CMakeLists.txt  test_flash_attention2.cpp  test_gaussFilter.cpp  test_gauss_filter.cpp  test_gaussian_blur.cpp  test_gaussian_filter.cpp  test_prefix_sum.cpp  test_sgemm.cpp  test_sgemm_dbg.cpp  test_sgemm_simt.cpp  test_sgemm_tcore.cpp  test_sgemm_tensor_core.cpp  test_topk.cpp  vkc_helper.hpp
(+23 files in other folders)
